--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,12 @@
 <h1>People Lists</h1>
 
-{{outlet}}
 
-<a href="/scientists">Scientists</a><br />
-<a href="/artists">Artists</a>
+<div class="container">
+  <div class="menu">
+    {{#link-to 'scientists'}}Scientists{{/link-to}}
+    {{#link-to 'artists'}}Artists{{/link-to}}
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
+</div>
