--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,11 +1,20 @@
 body {
-  /*width: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;*/
-  /*text-align: center;*/
   font-family: Helvetica, sans-serif;
 }
 ul {
   list-style: none;
+}
+
+.artist i {
+  opacity: .7;
+}
+.name {
+  display: flex;
+  align-items: center;
+}
+.name h3 {
+  padding: 0 10px;
+}
+.details ul li {
+  padding-bottom: 7px;
 }
