--- a/app/templates/artists.hbs
+++ b/app/templates/artists.hbs
@@ -1,24 +1,8 @@
 {{outlet}}
+<div class="content">
+  <h2>List of Artists</h2>
 
-<h2>List of Artists</h2>
-
-{{#each model as |artist|}}
-  {{artist-list artist=artist}}
-{{/each}}
-
-
-
-<!-- <hr>
-  {{#if isExpanded}}
-    <button {{action "toggleDetails"}}>Hide Details</button>
-    <div class="details">
-      <ul>
-        <li>Nationality: {{model.nationalty}}</li>
-        <li>Time Period: {{model.timePeriod}}</li>
-        <li>Movement: {{model.movement}}</li>
-        <li>Alive? {{model.alive}}</li>
-      </ul>
-    </div>
-  {{else}}
-    <button {{action "toggleDetails"}}>Show Details</button>
-  {{/if}} -->
+  {{#each model as |artist|}}
+    {{artist-list artist=artist}}
+  {{/each}}
+</div>
